--- a/configuration/router.ini
+++ b/configuration/router.ini
@@ -9,58 +9,10 @@ default.defaults.controller     = index
 default.defaults.action 	= index
 
 frontend.route                  = ":module/:controller/:action/*"
-default.defaults.module 	= default
+frontend.defaults.module 	= default
+;default.defaults.module 	= default
 frontend.defaults.controller    = index
 frontend.defaults.action 	= index
-
-catalogCategory.route 			= "stomatolodzy/:url/:string/*"
-catalogCategory.defaults.module 	= "catalog"
-catalogCategory.defaults.controller 	= "index"
-catalogCategory.defaults.action 	= "category"
-catalogCategory.defaults.url	 	= ""
-catalogCategory.defaults.string	 	= ""
-catalogCategory.defaults.reqs.url 	= "[\wd^/]{6,}"
-
-catalogShow.route 			= "/stomatolog/:id/*"
-catalogShow.defaults.module 		= "catalog"
-catalogShow.defaults.controller 	= "index"
-catalogShow.defaults.action 		= "show"
-catalogShow.defaults.reqs.id 		= "[\d]+"
-
-catalogMap.route 			= "/mapa/:id"
-catalogMap.defaults.module 		= "catalog"
-catalogMap.defaults.controller 		= "index"
-catalogMap.defaults.action 		= "map"
-catalogMap.defaults.id	 		= "0"
-catalogMap.defaults.reqs.id 		= "[\d]+"
-
-catalogMapJSONData.route 		= "/data.json"
-catalogMapJSONData.defaults.module 	= "catalog"
-catalogMapJSONData.defaults.controller 	= "index"
-catalogMapJSONData.defaults.action 	= "mapdata"
-catalogMapJSONData.defaults.format	= "json"
-
-catalogSearch.route 			= "/szukaj/*"
-catalogSearch.defaults.module 		= "catalog"
-catalogSearch.defaults.controller 	= "index"
-catalogSearch.defaults.action 		= "search"
-
-page.route 				= ":language_url/strona/:url"
-page.defaults.module 			= "page"
-page.defaults.controller 		= "index"
-page.defaults.action 			= "page"
-page.defaults.url	 		= ""
-page.defaults.language_url		= "pl"
-page.defaults.reqs.url 			= "[\wd]+"
-page.defaults.reqs.language_url         = "([\w]{0,4})"
-
-galleryImage.route 			= "upload/gallery/:type/:file"
-galleryImage.defaults.module 		= "gallery"
-galleryImage.defaults.controller 	= "image"
-galleryImage.defaults.action 		= "thumb"
-galleryImage.defaults.type	 	= "thumb"
-galleryImage.defaults.reqs.type 	= "[\wd]+"
-galleryImage.defaults.reqs.file 	= "[\wd_-\.]+"
 
 prodyctImage.route 			= "upload/product/:type/:file"
 prodyctImage.defaults.module 		= "product"
@@ -70,24 +22,6 @@ prodyctImage.defaults.type	 	= "thumb"
 prodyctImage.defaults.file	 	= ""
 prodyctImage.defaults.reqs.type 	= "[\wd]+"
 prodyctImage.defaults.reqs.file 	= "[\wd_-\.]+"
-
-catalogImage.route 			= "upload/catalog/image/:type/:file"
-catalogImage.defaults.module 		= "catalog"
-catalogImage.defaults.controller 	= "image"
-catalogImage.defaults.action 		= "thumb"
-catalogImage.defaults.type	 	= "thumb"
-catalogImage.defaults.file	 	= ""
-catalogImage.defaults.reqs.type 	= "[\wd]+"
-catalogImage.defaults.reqs.file 	= "[\wd_-\.]+"
-
-catalogImageStaff.route 		= "upload/catalog/staff/:type/:file"
-catalogImageStaff.defaults.module 	= "catalog"
-catalogImageStaff.defaults.controller 	= "staff"
-catalogImageStaff.defaults.action 	= "thumb"
-catalogImageStaff.defaults.type	 	= "thumb"
-catalogImageStaff.defaults.file	 	= ""
-catalogImageStaff.defaults.reqs.type 	= "[\wd]+"
-catalogImageStaff.defaults.reqs.file 	= "[\wd_-\.]+"
 
 news.route 				= ":language_url/aktualnosc/:url"
 news.defaults.module 			= "news"
@@ -108,6 +42,81 @@ newsArch.defaults.reqs.year 		= "\d{4}"
 newsArch.defaults.reqs.month 		= "\d{1,2}"
 newsArch.defaults.reqs.language_url     = "([\w]{0,4})"
 
+galleryImage.route 			= "upload/gallery/:type/:file"
+galleryImage.defaults.module 		= "gallery"
+galleryImage.defaults.controller 	= "image"
+galleryImage.defaults.action 		= "thumb"
+galleryImage.defaults.type	 	= "thumb"
+galleryImage.defaults.reqs.type 	= "[\wd]+"
+galleryImage.defaults.reqs.file 	= "[\wd_-\.]+"
 
+page.route 				= ":language_url/strona/:url"
+page.defaults.module 			= "page"
+page.defaults.controller 		= "index"
+page.defaults.action 			= "page"
+page.defaults.url	 		= ""
+page.defaults.language_url		= "pl"
+page.defaults.reqs.url 			= "[\wd]+"
+page.defaults.reqs.language_url         = "([\w]{0,4})"
+
+catalogImage.route 			= "upload/catalog/image/:type/:file"
+catalogImage.defaults.module 		= "catalog"
+catalogImage.defaults.controller 	= "image"
+catalogImage.defaults.action 		= "thumb"
+catalogImage.defaults.type	 	= "thumb"
+catalogImage.defaults.file	 	= ""
+catalogImage.defaults.reqs.type 	= "[\wd]+"
+catalogImage.defaults.reqs.file 	= "[\wd_-\.]+"
+
+catalogImageStaff.route 		= "upload/catalog/staff/:type/:file"
+catalogImageStaff.defaults.module 	= "catalog"
+catalogImageStaff.defaults.controller 	= "staff"
+catalogImageStaff.defaults.action 	= "thumb"
+catalogImageStaff.defaults.type	 	= "thumb"
+catalogImageStaff.defaults.file	 	= ""
+catalogImageStaff.defaults.reqs.type 	= "[\wd]+"
+catalogImageStaff.defaults.reqs.file 	= "[\wd_-\.]+"
+
+;catalogMap.route 			= "/mapa/:id"
+;catalogMap.defaults.module 		= "catalog"
+;catalogMap.defaults.controller 		= "index"
+;catalogMap.defaults.action 		= "map"
+;catalogMap.defaults.id	 		= "0"
+;catalogMap.defaults.reqs.id 		= "[\d]+"
+
+catalogMapJSONData.route 		= "/data.json"
+catalogMapJSONData.defaults.module 	= "catalog"
+catalogMapJSONData.defaults.controller 	= "index"
+catalogMapJSONData.defaults.action 	= "mapdata"
+catalogMapJSONData.defaults.format	= "json"
+
+catalogSearch.route 			= "/szukaj/*"
+catalogSearch.defaults.module 		= "catalog"
+catalogSearch.defaults.controller 	= "index"
+catalogSearch.defaults.action 		= "search"
+
+catalogCategory.route 			= "stomatolodzy/:url/:string/*"
+catalogCategory.defaults.module 	= "catalog"
+catalogCategory.defaults.controller 	= "index"
+catalogCategory.defaults.action 	= "category"
+catalogCategory.defaults.url	 	= ""
+catalogCategory.defaults.string	 	= ""
+catalogCategory.defaults.reqs.url 	= "[\wd^/]{6,}"
+
+catalogShow.route 			= "/stomatolog/:id/*"
+catalogShow.defaults.module 		= "catalog"
+catalogShow.defaults.controller 	= "index"
+catalogShow.defaults.action 		= "show"
+catalogShow.defaults.reqs.id 		= "[\d]+"
+
+
+www.type                                = "Zend_Controller_Router_Route_Hostname"
+www.route                               = ":url.stomatolodzy.krakow.pl"
+www.defaults.module                     = "catalog"
+www.defaults.controller                 = "site"
+www.defaults.action                     = "show"
+www.chains.index.type                   = "Zend_Controller_Router_Route_Static"
+www.chains.index.route                  = ""
 
 [development : production]
+www.route = ":url.localhost"
