--- a/configuration/router.ini
+++ b/configuration/router.ini
@@ -4,13 +4,12 @@
 [production]
 
 default.route                   = ":module/:controller/:action/*"
-default.defaults.module 	= default
+default.defaults.module 	= catalog
 default.defaults.controller     = index
 default.defaults.action 	= index
 
 frontend.route                  = ":module/:controller/:action/*"
-frontend.defaults.module 	= default
-;default.defaults.module 	= default
+frontend.defaults.module 	= catalog
 frontend.defaults.controller    = index
 frontend.defaults.action 	= index
 
