--- a/configuration/acl.ini
+++ b/configuration/acl.ini
@@ -156,6 +156,8 @@
 	
 	catalog_index.allow.0 = ""
 	
+	catalog_site.allow.0 = "show"
+	
 	catalog_staff.allow.0 = "thumb"
 	
 	default_actions.allow.0 = ""
@@ -170,46 +172,46 @@
 	gallery_image.allow.1 = "upload"
 	
 	gallery_index.allow.0 = "privilage_view_guest"
-	gallery_index.allow.1 = "index"
-	gallery_index.allow.2 = "gallery"
+	gallery_index.allow.1 = "gallery"
+	gallery_index.allow.2 = "index"
 	
 	gallery_index.deny.0 = "privilage_view_member"
 	gallery_index.deny.1 = "privilage_view_special"
 	
 	group_image.allow.0 = "thumb"
 	
-	group_index.allow.0 = "index"
-	group_index.allow.1 = "gallery"
-	group_index.allow.2 = "privilage_view_guest"
-	group_index.allow.3 = "display"
+	group_index.allow.0 = "gallery"
+	group_index.allow.1 = "privilage_view_guest"
+	group_index.allow.2 = "display"
+	group_index.allow.3 = "index"
 	
 	group_index.deny.0 = "privilage_view_member"
 	group_index.deny.1 = "privilage_view_special"
 	
+	news_index.allow.0 = "list"
+	news_index.allow.1 = "add-comment"
+	news_index.allow.2 = "display"
+	news_index.allow.3 = "privilage_view_guest"
+	news_index.allow.4 = "search"
+	news_index.allow.5 = "category"
+	news_index.allow.6 = "index"
+	
 	news_index.deny.0 = "privilage_view_member"
 	news_index.deny.1 = "privilage_view_special"
 	
-	news_index.allow.0 = "search"
-	news_index.allow.1 = "category"
-	news_index.allow.2 = "index"
-	news_index.allow.3 = "list"
-	news_index.allow.4 = "add-comment"
-	news_index.allow.5 = "privilage_view_guest"
-	news_index.allow.6 = "display"
-	
-	page_index.allow.0 = "page"
-	page_index.allow.1 = "privilage_view_guest"
-	page_index.allow.2 = "index"
+	page_index.allow.0 = "privilage_view_guest"
+	page_index.allow.1 = "index"
+	page_index.allow.2 = "page"
 	
 	page_index.deny.0 = "privilage_view_member"
 	page_index.deny.1 = "privilage_view_special"
 	
 	product_image.allow.0 = "thumb"
 	
-	product_index.allow.0 = "manufacturer"
-	product_index.allow.1 = "product"
-	product_index.allow.2 = "index"
-	product_index.allow.3 = "category"
+	product_index.allow.0 = "product"
+	product_index.allow.1 = "index"
+	product_index.allow.2 = "category"
+	product_index.allow.3 = "manufacturer"
 	
 	user_auth.allow.0 = ""
 	
@@ -219,22 +221,28 @@
 	
 	
 [member]
+	catalog_image.allow.0 = "thumb"
+	
 	catalog_index.allow.0 = ""
 	
-	catalog_management.allow.0 = "index"
-	catalog_management.allow.1 = "imageupload"
-	catalog_management.allow.2 = "imagemain"
-	catalog_management.allow.3 = "imagedelete"
-	catalog_management.allow.4 = "staff"
-	catalog_management.allow.5 = "time"
-	catalog_management.allow.6 = "options"
-	catalog_management.allow.7 = "staffupdate"
-	catalog_management.allow.8 = "edit"
-	catalog_management.allow.9 = "staffdelete"
-	catalog_management.allow.10 = "service"
-	catalog_management.allow.11 = "images"
+	catalog_management.allow.0 = "edit"
+	catalog_management.allow.1 = "staffdelete"
+	catalog_management.allow.2 = "service"
+	catalog_management.allow.3 = "images"
+	catalog_management.allow.4 = "imageupload"
+	catalog_management.allow.5 = "index"
+	catalog_management.allow.6 = "imagemain"
+	catalog_management.allow.7 = "imagedelete"
+	catalog_management.allow.8 = "staff"
+	catalog_management.allow.9 = "time"
+	catalog_management.allow.10 = "options"
+	catalog_management.allow.11 = "staffupdate"
 	
 	catalog_management.deny.0 = "privilage_moderate"
+	
+	catalog_site.allow.0 = "show"
+	
+	catalog_staff.allow.0 = "thumb"
 	
 	default_actions.allow.0 = ""
 	
@@ -244,38 +252,38 @@
 	
 	gallery_image.allow.0 = "thumb"
 	
-	gallery_index.allow.0 = "privilage_view_guest"
-	gallery_index.allow.1 = "index"
-	gallery_index.allow.2 = "privilage_view_member"
-	gallery_index.allow.3 = "gallery"
+	gallery_index.allow.0 = "privilage_view_member"
+	gallery_index.allow.1 = "gallery"
+	gallery_index.allow.2 = "index"
+	gallery_index.allow.3 = "privilage_view_guest"
 	
 	gallery_index.deny.0 = "privilage_view_special"
 	
 	group_image.allow.0 = "thumb"
 	
-	group_index.allow.0 = "display"
-	group_index.allow.1 = "index"
-	group_index.allow.2 = "gallery"
-	group_index.allow.3 = "privilage_view_guest"
-	group_index.allow.4 = "privilage_view_member"
+	group_index.allow.0 = "privilage_view_member"
+	group_index.allow.1 = "display"
+	group_index.allow.2 = "index"
+	group_index.allow.3 = "gallery"
+	group_index.allow.4 = "privilage_view_guest"
 	
 	group_index.deny.0 = "privilage_view_special"
 	
-	news_index.allow.0 = "add-comment"
+	news_index.allow.0 = "display"
 	news_index.allow.1 = "privilage_view_guest"
-	news_index.allow.2 = "display"
-	news_index.allow.3 = "privilage_view_member"
-	news_index.allow.4 = "search"
-	news_index.allow.5 = "category"
-	news_index.allow.6 = "index"
-	news_index.allow.7 = "list"
+	news_index.allow.2 = "privilage_view_member"
+	news_index.allow.3 = "search"
+	news_index.allow.4 = "category"
+	news_index.allow.5 = "index"
+	news_index.allow.6 = "list"
+	news_index.allow.7 = "add-comment"
 	
 	news_index.deny.0 = "privilage_view_special"
 	
-	page_index.allow.0 = "page"
-	page_index.allow.1 = "privilage_view_guest"
-	page_index.allow.2 = "privilage_view_member"
-	page_index.allow.3 = "index"
+	page_index.allow.0 = "index"
+	page_index.allow.1 = "page"
+	page_index.allow.2 = "privilage_view_guest"
+	page_index.allow.3 = "privilage_view_member"
 	
 	page_index.deny.0 = "privilage_view_special"
 	
