--- a/configuration/router.ini
+++ b/configuration/router.ini
@@ -4,7 +4,7 @@
 [production]
 
 default.route                   = ":module/:controller/:action/*"
-default.defaults.module 	= catalog
+default.defaults.module 	= default
 default.defaults.controller     = index
 default.defaults.action 	= index
 
