--- a/configuration/database.ini
+++ b/configuration/database.ini
@@ -3,9 +3,9 @@
 	default.adapter = "Pdo_Mysql"
 	
 	default.config.host = "localhost"
-	default.config.username = "promotor_stomatolodzy"
+	default.config.username = "stomatolodzy"
 	default.config.password = "Asus.2008"
-	default.config.dbname = "stomatolodzy"
+	default.config.dbname = "promotor_stomatolodzy"
 	
 	
 [development]
