--- a/configuration/router.ini
+++ b/configuration/router.ini
@@ -108,7 +108,6 @@ catalogShow.defaults.controller 	= "index"
 catalogShow.defaults.action 		= "show"
 catalogShow.defaults.reqs.id 		= "[\d]+"
 
-
 www.type                                = "Zend_Controller_Router_Route_Hostname"
 www.route                               = ":url.stomatolodzy.krakow.pl"
 www.defaults.module                     = "catalog"
@@ -117,5 +116,11 @@ www.defaults.action                     = "show"
 www.chains.index.type                   = "Zend_Controller_Router_Route_Static"
 www.chains.index.route                  = ""
 
+;analoginczne jak 'www' poniżej
+;dziwne ale z 'chains' router nie dziala!
+;catalogWww.type                         = "Zend_Controller_Router_Route_Hostname"
+;catalogWww.route                        = ":url.stomatolodzy.krakow.pl"
+
 [development : production]
 www.route = ":url.localhost"
+;catalogWww.route = ":url.localhost"
