--- a/trunk/configuration/router.ini
+++ b/trunk/configuration/router.ini
@@ -102,19 +102,21 @@ catalogCategory.defaults.url	 	= ""
 catalogCategory.defaults.string	 	= ""
 catalogCategory.defaults.reqs.url 	= "[\wd^/]{6,}"
 
-catalogShow.route 			= "/stomatolog/:id/*"
-catalogShow.defaults.module 		= "catalog"
-catalogShow.defaults.controller 	= "index"
-catalogShow.defaults.action 		= "show"
+catalogShow.route 			= /stomatolog/:id/*
+catalogShow.defaults.module 		= catalog
+catalogShow.defaults.controller 	= index
+catalogShow.defaults.action 		= show
 catalogShow.defaults.reqs.id 		= "[\d]+"
 
-www.type                                = "Zend_Controller_Router_Route_Hostname"
-www.route                               = ":url.stomatolodzy.krakow.pl"
-www.defaults.module                     = "catalog"
-www.defaults.controller                 = "site"
-www.defaults.action                     = "show"
-www.chains.index.type                   = "Zend_Controller_Router_Route_Static"
-www.chains.index.route                  = ""
+www.type                                = Zend_Controller_Router_Route_Hostname
+www.route                               = :url.stomatolodzy.krakow.pl
+www.defaults.module                     = catalog
+www.defaults.controller                 = site
+www.defaults.action                     = show
+www.chains.index.type                   = Zend_Controller_Router_Route_Static
+www.chains.index.route                  = /
+www.chains.tab.route                    = /:tab
+www.chains.tab.defaults.tab             = ogolne
 
 ;analoginczne jak 'www' poniżej
 ;dziwne ale z 'chains' router nie dziala!
