--- a/trunk/configuration/system.ini
+++ b/trunk/configuration/system.ini
@@ -10,7 +10,7 @@
 	CACHE.frontendName = "Core"
 	CACHE.backendName = "File"
 	CACHE.frontendOptions.lifetime = "86000"
-	CACHE.frontendOptions.automatic_serialization = ""
+	CACHE.frontendOptions.automatic_serialization = "1"
 	CACHE.backendOptions.cache_dir = "{{TMP_PATHNAME}}"
 	
 [development : production]	
