--- a/configuration/cache.ini
+++ b/configuration/cache.ini
@@ -22,12 +22,20 @@
     outputimages.backend.name = "File"
     outputimages.backend.options.cache_dir = "{{TMP_PATHNAME}}/cache/output/images/"
 
-    page.frontend.name = "Page"
-    page.frontend.options.lifetime = "86400"
-    page.frontend.options.debug_header = "1"
+    ;page.frontend.name = "KontorX_Cache_Frontend_Page"
+    ;page.frontend.options.lifetime = "86400"
+    ;page.frontend.options.debug_header = "1"
+    ;page.frontend.options.make_id_with_get_variables = 1
+    ;"page.frontend.options.regexps.^/stomatolog/(\d+).cache = 1"
+    ;page.frontend.options.regexps.^/stomatolodzy/.cache = 1
+
 
     page.backend.name = "File"
-    page.backend.options.cache_dir = "{{TMP_PATHNAME}}/cache/page/"
+    page.backend.options.cache_dir              = "{{PUBLIC_PATHNAME}}/stomatolodzy/"
+    ;page.backend.options.file_name_prefix       = html
+    ;page.backend.options.hashed_directory_umask= 0755
+    ;page.backend.options.read_control           = 0
+    ;page.backend.options.hashed_directory_level = 1
 
     translate.frontend.name = "Page"
     translate.frontend.options.lifetime = "86400"
